# Daifuku

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-ci.yml
DockerFileFolder/: Dockerfile
api/: allegro_serve.py  combined_serve.py  hunyuan_serve.py  ltx_serve.py  mochi_serve.py  models.py  requirements.txt  serve.py
configs/: allegro_settings.py  aws_settings.py  combined_settings.py  hunyuan_config.py  hunyuan_settings.py  ltx_settings.py  mochi_settings.py  mochi_weights.py
scripts/: allegro_diffusers.py  convert_mochi_to_diffusers.py  download_weights.py  hunyuan_video_inference.py  ltx_inference.py  mochi_diffusers.py  s3_manager.py
src/api/: mochi_serve.py
src/configs/: mochi_settings.py  mochi_weights.py
src/scripts/: convert_mochi_to_diffusers.py  download_weights.py  mochi_diffusers.py  mp4_to_s3_json.py  upscale-video.py
